# conman

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  requirements.txt  setup.cfg  setup.py
.devcontainer/: devcontainer.json  postCommand.sh  postStartCommand.sh
.github/workflows/: publish-to-pypi.yml
conman/: __init__.py  commands.py  config.py  constants.py  io.py  main.py  utils.py
conman/commands/: build.py  clean.py  init.py  install.py  new_build.py  status.py  update.py
conman/config/: image.py
conman/ressources/: __init__.py  devcontainer.py  docker.py  docker_compose.py  docker_file.py
conman/templates/: empty_template_.conman-config.yml  empty_template_Dockerfile-root  empty_template_Dockerfile-user  empty_template_devcontainer.json  empty_template_docker-compose-nvidia.yml  empty_template_docker-compose.yml
docs/: windows_user_guidelines.md
test/: .conman-config.yml
tests/: .conman-config.yml  test_commands.py
tests/.devcontainer/: devcontainer.json  docker-compose.yml
