[metadata]
name = conman
version = 0.1.0
description = A Python tool for managing containers.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/elmokulc/conman.git
author = Christian Elmo, Ludovic Charleux
author_email = christianelmo@gmail.com
license = GPL v3
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
install_requires =
    pyyaml>=5.3.1
    setuptools>=65.6.3
    importlib-metadata >=6.0.1
python_requires = >=3.8

[options.package_data]
conman = templates/*

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    conman = conman.main:main
